--- a/public/google70c8ed99ec7ff920.html
+++ b/public/google70c8ed99ec7ff920.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="google-site-verification" content="google70c8ed99ec7ff920" />
-</head>
-<body>
-</body>
-</html>
+google-site-verification: google70c8ed99ec7ff920.html
